Refactor collectors